validando os valores do paciente no momento de adicionar

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 						<tr class="paciente" >
 							<td class="info-nome">João</td>
-							<td class="info-peso">500</td>
+							<td class="info-peso">510</td>
 							<td class="info-altura">1.72</td>
 							<td class="info-gordura">40</td>
 							<td class="info-imc">0</td>
@@ -74,6 +74,7 @@
 			<section class="container">
     			<h2 id="titulo-form">Adicionar novo paciente</h2>
     				<form id="form-adiciona">
+    					<span id="mensagem-erro"></span>
         				<div class="">
             				<label for="nome">Nome:</label>
             				<input id="nome" name="nome" type="text" placeholder="digite o nome do seu paciente" class="campo">
