--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
 			<section class="container">
     			<h2 id="titulo-form">Adicionar novo paciente</h2>
     				<form id="form-adiciona">
-    					<span id="mensagem-erro"></span>
+    					<ul id="mensagens-erro">
+    						
+    					</ul>
         				<div class="">
             				<label for="nome">Nome:</label>
             				<input id="nome" name="nome" type="text" placeholder="digite o nome do seu paciente" class="campo">
